<resources>
    <string name="app_name">Inventory</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="delete_all_entries">Delete all entries</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_insert_product_failed">Failed to insert product</string>
    <string name="editor_insert_product_successful">Insert product successful</string>
    <string name="editor_update_product_failed">Failed to update product</string>
    <string name="editor_update_product_successful">Update product successful</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="unsaved_changes_dialog_msg">Discard changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="editor_delete_product_failed">Failed to delete product</string>
    <string name="editor_delete_product_successful">Delete product successful</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_dialog_msg">Delete all products?</string>
    <string name="product_details">Product Details</string>
    <string name="hint_name">Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="supplier_details">Supplier Details</string>
    <string name="hint_supplier_name">Name</string>
    <string name="supplier_phone_number">Phone Number</string>
    <string name="no_items_to_display">No items to display\nClick on the \'+\' button below and enter product details</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="add">add</string>
    <string name="subtract">subtract</string>
    <string name="add_cart">add cart</string>
    <string name="view_detail">view detail</string>
</resources>
